--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ filterButtons.forEach(btn=>{
 function showPrank(){
   const prankText=document.getElementById('prank-text');
   prankText.style.display='block'; prankText.innerText='';
-  const message="Fuck 💯you 😜 Enjoy your coffee instead!";
+  const message="Haha 😜 Enjoy your coffee instead!";
   let i=0;
   const typeWriter=setInterval(()=>{
     prankText.innerText+=message[i]; i++;
@@ -235,449 +235,3 @@ function showPrank(){
 </script>
 </body>
 </html>
-        <li class="nav-item"><a class="nav-link" href="#newsletter">Newsletter</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<!-- Hero Section with Bootstrap Carousel -->
-<section id="hero">
-  <div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
-    <!-- Indicators -->
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active"></button>
-      <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1"></button>
-      <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2"></button>
-    </div>
-    <!-- Slides -->
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=1200&q=80" class="d-block w-100" alt="Coffee">
-        <div class="carousel-caption">
-          <h1 class="display-4 fw-bold">Welcome to Delish Café</h1>
-          <p class="lead">Experience the taste of perfection</p>
-          <a href="#menu" class="btn btn-lg">Explore Menu</a>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=1200&q=80" class="d-block w-100" alt="Cake">
-        <div class="carousel-caption">
-          <h1 class="display-4 fw-bold">Sweet Treats</h1>
-          <p class="lead">Delicious cakes made fresh daily</p>
-          <a href="#menu" class="btn btn-lg">See Menu</a>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?auto=format&fit=crop&w=1200&q=80" class="d-block w-100" alt="Sandwich">
-        <div class="carousel-caption">
-          <h1 class="display-4 fw-bold">Tasty Sandwiches</h1>
-          <p class="lead">Perfect bites for your coffee break</p>
-          <a href="#menu" class="btn btn-lg">Order Now</a>
-        </div>
-      </div>
-    </div>
-    <!-- Controls -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
-  </div>
-</section>
-
-<!-- About -->
-<section id="about" class="py-5 bg-light text-center">
-  <div class="container">
-    <h2 class="mb-3">About Us</h2>
-    <p>Delish Café is dedicated to bringing you the finest coffee and gourmet treats in a cozy, welcoming atmosphere.</p>
-    <div class="row mt-4">
-      <div class="col-md-4"><div class="counter" data-target="5000">0</div><p>Visitors</p></div>
-      <div class="col-md-4"><div class="counter" data-target="120">0</div><p>Menu Items</p></div>
-      <div class="col-md-4"><div class="counter" data-target="25">0</div><p>Staff</p></div>
-    </div>
-  </div>
-</section>
-
-<!-- Menu -->
-<section id="menu" class="py-5 text-center">
-  <div class="container">
-    <div class="mb-4">
-      <button class="btn btn-sm filter-btn active" style="background:#ff7f50; color:white;" data-filter="all">All</button>
-      <button class="btn btn-sm filter-btn" style="background:#ff7f50; color:white;" data-filter="coffee">Coffee</button>
-      <button class="btn btn-sm filter-btn" style="background:#ff7f50; color:white;" data-filter="cake">Cake</button>
-      <button class="btn btn-sm filter-btn" style="background:#ff7f50; color:white;" data-filter="sandwich">Sandwich</button>
-    </div>
-    <div class="row g-4">
-      <div class="col-md-3 menu-card" data-category="coffee">
-        <div class="card shadow-sm">
-          <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=400&q=80" class="card-img-top" alt="Cappuccino">
-          <div class="card-body">
-            <h5 class="card-title">Cappuccino</h5>
-            <p class="card-text">Rich espresso with frothy milk foam.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 menu-card" data-category="cake">
-        <div class="card shadow-sm">
-          <img src="https://images.unsplash.com/photo-1627308595229-7830a5c91f9f?auto=format&fit=crop&w=400&q=80" class="card-img-top" alt="Chocolate Cake">
-          <div class="card-body">
-            <h5 class="card-title">Chocolate Cake</h5>
-            <p class="card-text">Decadent and moist chocolate cake.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 menu-card" data-category="sandwich">
-        <div class="card shadow-sm">
-          <img src="https://th.bing.com/th/id/OIP.dXklaEouFOQHGeOxiTl8vgHaHa" class="card-img-top" alt="Club Sandwich">
-          <div class="card-body">
-            <h5 class="card-title">Club Sandwich</h5>
-            <p class="card-text">Fresh layers of veggies, cheese & chicken.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 menu-card" data-category="coffee">
-        <div class="card shadow-sm">
-          <img src="https://th.bing.com/th/id/OIP.tFkYqzaqstN6PiP-8vIMwwHaJQ" class="card-img-top" alt="Latte">
-          <div class="card-body">
-            <h5 class="card-title">Latte</h5>
-            <p class="card-text">Steamed milk with espresso for smooth taste.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Contact -->
-<section id="contact" class="py-5 bg-light text-center">
-  <div class="container">
-    <h2 class="mb-4">Contact Us</h2>
-    <form class="mx-auto" style="max-width:500px;" onsubmit="submitForm(event)">
-      <input type="text" class="form-control mb-3" placeholder="Your Name" required>
-      <input type="email" class="form-control mb-3" placeholder="Your Email" required>
-      <textarea class="form-control mb-3" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit" class="btn w-100" style="background:#ff7f50; color:white;">Send Message</button>
-    </form>
-  </div>
-</section>
-
-<!-- Newsletter -->
-<section id="newsletter" class="py-5 text-center bg-light">
-  <div class="container">
-    <h2 class="mb-3">Subscribe to Our Newsletter</h2>
-    <form class="d-flex justify-content-center flex-wrap gap-2" onsubmit="newsletterSubmit(event)">
-      <input type="email" class="form-control w-auto" placeholder="Enter your email" required>
-      <button class="btn" style="background:#ff7f50; color:white;">Subscribe</button>
-    </form>
-    <div class="d-flex justify-content-center gap-3 mt-3">
-      <a href="#"><i class="fab fa-facebook-f fs-4 text-warning"></i></a>
-      <a href="#"><i class="fab fa-instagram fs-4 text-warning"></i></a>
-      <a href="#"><i class="fab fa-twitter fs-4 text-warning"></i></a>
-      <a href="#"><i class="fab fa-pinterest-p fs-4 text-warning"></i></a>
-    </div>
-  </div>
-</section>
-
-<!-- Prank -->
-<section id="prank" class="py-5 text-center" style="background:#fff0f0;">
-  <h2>Surprise</h2>
-  <button onclick="showPrank()" class="btn mt-3" style="background:#ff7f50; color:white;">Click here!</button>
-  <p id="prank-text"></p>
-</section>
-
-<!-- Footer -->
-<footer class="bg-dark text-white py-3 text-center">
-  <p>&copy; 2025 Delish Café. All Rights Reserved.</p>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-function submitForm(e){ e.preventDefault(); alert("Thank you! Your message has been sent."); e.target.reset(); }
-function newsletterSubmit(e){ e.preventDefault(); alert("Subscribed successfully!"); e.target.reset(); }
-
-const counters=document.querySelectorAll('.counter');
-counters.forEach(counter=>{
-  counter.innerText='0';
-  const updateCounter=()=>{
-    const target=+counter.dataset.target;
-    const current=+counter.innerText;
-    const increment=target/200;
-    if(current<target){ counter.innerText=Math.ceil(current+increment); setTimeout(updateCounter,10); }
-    else{ counter.innerText=target; }
-  };
-  updateCounter();
-});
-
-const filterButtons=document.querySelectorAll('.filter-btn');
-const menuCards=document.querySelectorAll('.menu-card');
-filterButtons.forEach(btn=>{
-  btn.addEventListener('click', ()=>{
-    filterButtons.forEach(b=>b.classList.remove('active'));
-    btn.classList.add('active');
-    const filter=btn.dataset.filter;
-    menuCards.forEach(card=>{
-      card.style.display=(filter==='all'||card.dataset.category===filter)?'block':'none';
-    });
-  });
-});
-
-function showPrank(){
-  const prankText=document.getElementById('prank-text');
-  prankText.style.display='block'; prankText.innerText='';
-  const message="FUCK 😁💯YOU 😜 Enjoy your coffee instead!";
-  let i=0;
-  const typeWriter=setInterval(()=>{
-    prankText.innerText+=message[i]; i++;
-    if(i>=message.length){ clearInterval(typeWriter); setTimeout(()=>{ prankText.style.display='none'; },5000); }
-  },50);
-}
-</script>
-</body>
-</html>
-.counter { font-size:2rem; font-weight:bold; color:#ff7f50; }
-
-/* Menu */
-#menu-controls { margin-bottom:40px; display:flex; justify-content:center; flex-wrap:wrap; gap:10px; }
-#menu-controls button { background:#ff7f50; color:#fff; border:none; padding:10px 20px; cursor:pointer; border-radius:5px; transition:0.3s; }
-#menu-controls button:hover { background:#e67347; }
-#menu-controls button.active { background:#ffe5d9; color:#ff7f50; }
-#menu { display:grid; grid-template-columns: repeat(auto-fit,minmax(250px,1fr)); gap:30px; }
-.menu-card { background:#fff; border-radius:10px; padding:20px; box-shadow:0 4px 6px rgba(0,0,0,0.1); transition:0.5s; cursor:pointer; opacity:0; transform:translateX(-50px); }
-.menu-card.visible { opacity:1; transform:translateX(0); }
-.menu-card img { width:100%; border-radius:10px; transition:0.4s; }
-.menu-card img:hover { transform:scale(1.1); }
-.menu-card h3 { margin:15px 0 10px; color:#6f4e37; }
-
-/* Contact */
-#contact form { max-width:500px; margin:0 auto; display:flex; flex-direction:column; gap:15px; }
-#contact input, #contact textarea { padding:10px; border-radius:5px; border:1px solid #ccc; font-size:1rem; width:100%; }
-#contact button { background:#ff7f50; color:#fff; border:none; padding:12px; font-size:1rem; cursor:pointer; border-radius:5px; transition:0.3s; }
-#contact button:hover { background:#e67347; }
-
-/* Newsletter */
-#newsletter { background:#fff8f0; padding:50px 20px; }
-#newsletter h2 { color:#6f4e37; margin-bottom:20px; }
-#newsletter form { display:flex; justify-content:center; flex-wrap:wrap; gap:10px; }
-#newsletter input { padding:10px; border-radius:5px; border:1px solid #ccc; flex:1; min-width:200px; }
-#newsletter button { background:#ff7f50; color:#fff; border:none; padding:12px 25px; cursor:pointer; border-radius:5px; transition:0.3s; }
-#newsletter button:hover { background:#e67347; }
-
-/* Social icons */
-.social-icons { display:flex; justify-content:center; gap:20px; margin-top:20px; flex-wrap:wrap; }
-.social-icons a { color:#ff7f50; font-size:1.5rem; transition:0.3s; }
-.social-icons a:hover { color:#e67347; }
-
-/* Footer */
-footer { background:#4e342e; color:#fff; padding:20px; text-align:center; }
-
-/* Prank Section */
-#prank-text { font-size:1.2rem; color:#6f4e37; margin-top:20px; display:none; }
-
-/* Responsive */
-@media(max-width:768px){
-  nav ul { display:none; flex-direction:column; gap:15px; background:#6f4e37; position:absolute; top:60px; right:20px; padding:10px; border-radius:8px; }
-  nav ul.show { display:flex; }
-  .menu-toggle { display:block; color:#fff; }
-  #hero h1 { font-size:2rem; }
-  #hero button { padding:12px 20px; font-size:0.9rem; }
-}
-</style>
-</head>
-<body>
-
-<header>
-  <div class="logo">Delish Café</div>
-  <div class="menu-toggle"><i class="fas fa-bars"></i></div>
-  <nav>
-    <ul>
-      <li><a href="#hero">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#menu">Menu</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#newsletter">Newsletter</a></li>
-    </ul>
-  </nav>
-</header>
-
-<!-- Hero Section -->
-<section id="hero">
-  <div class="carousel">
-    <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=1200&q=80" class="active" alt="Coffee">
-    <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=1200&q=80" alt="Cake">
-    <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?auto=format&fit=crop&w=1200&q=80" alt="Sandwich">
-  </div>
-  <h1>Welcome to Delish Café</h1>
-  <p>Experience the taste of perfection</p>
-  <button onclick="document.getElementById('menu').scrollIntoView({behavior:'smooth'})">Explore Menu</button>
-</section>
-
-<!-- About Section -->
-<section id="about">
-  <h2>About Us</h2>
-  <p>Delish Café is dedicated to bringing you the finest coffee and gourmet treats in a cozy, welcoming atmosphere.</p>
-  <div class="counters">
-    <div class="counter" data-target="5000">0</div><p>Visitors</p>
-    <div class="counter" data-target="120">0</div><p>Menu Items</p>
-    <div class="counter" data-target="25">0</div><p>Staff</p>
-  </div>
-</section>
-
-<!-- Menu Section -->
-<section id="menu">
-  <div id="menu-controls">
-    <button class="filter-btn active" data-filter="all">All</button>
-    <button class="filter-btn" data-filter="coffee">Coffee</button>
-    <button class="filter-btn" data-filter="cake">Cake</button>
-    <button class="filter-btn" data-filter="sandwich">Sandwich</button>
-  </div>
-  <div class="menu-card" data-category="coffee">
-    <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=400&q=80" alt="Cappuccino">
-    <h3>Cappuccino</h3>
-    <p>Rich espresso with frothy milk foam, perfect start to your day.</p>
-  </div>
-  <div class="menu-card" data-category="cake">
-    <img src="https://images.unsplash.com/photo-1627308595229-7830a5c91f9f?auto=format&fit=crop&w=400&q=80" alt="Chocolate Cake">
-    <h3>Chocolate Cake</h3>
-    <p>Decadent and moist chocolate cake made with premium cocoa.</p>
-  </div>
-  <div class="menu-card" data-category="sandwich">
-    <img src="https://th.bing.com/th/id/OIP.dXklaEouFOQHGeOxiTl8vgHaHa?w=177&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Club Sandwich">
-    <h3>Club Sandwich</h3>
-    <p>Freshly made sandwich with layers of veggies, cheese, and chicken.</p>
-  </div>
-  <div class="menu-card" data-category="coffee">
-    <img src="https://th.bing.com/th/id/OIP.tFkYqzaqstN6PiP-8vIMwwHaJQ?w=157&h=196&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Latte">
-    <h3>Latte</h3>
-    <p>Perfectly steamed milk with espresso for smooth taste.</p>
-  </div>
-</section>
-
-<!-- Contact Section -->
-<section id="contact">
-  <h2>Contact Us</h2>
-  <form onsubmit="submitForm(event)">
-    <input type="text" placeholder="Your Name" required>
-    <input type="email" placeholder="Your Email" required>
-    <textarea rows="5" placeholder="Your Message" required></textarea>
-    <button type="submit">Send Message</button>
-  </form>
-</section>
-
-<!-- Newsletter Section -->
-<section id="newsletter">
-  <h2>Subscribe to Our Newsletter</h2>
-  <form onsubmit="newsletterSubmit(event)">
-    <input type="email" placeholder="Enter your email" required>
-    <button type="submit">Subscribe</button>
-  </form>
-  <div class="social-icons">
-    <a href="#"><i class="fab fa-facebook-f"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-pinterest-p"></i></a>
-  </div>
-</section>
-
-<!-- Surprise Prank Section -->
-<section id="prank" style="padding:50px 20px; background:#fff0f0; text-align:center;">
-  <h2>Surprise</h2>
-  <button onclick="showPrank()" style="background:#ff7f50; color:#fff; border:none; padding:12px 25px; border-radius:5px; cursor:pointer; transition:0.3s;">Click here !</button>
-  <p id="prank-text"></p>
-</section>
-
-<footer>
-  <p>&copy; 2025 Delish Café. All Rights Reserved.</p>
-</footer>
-
-<script>
-// Mobile menu toggle
-const menuToggle = document.querySelector('.menu-toggle');
-const navUl = document.querySelector('nav ul');
-menuToggle.addEventListener('click', ()=>{ navUl.classList.toggle('show'); });
-
-// Smooth scroll
-document.querySelectorAll('nav a').forEach(link=>{
-  link.addEventListener('click', e=>{
-    e.preventDefault();
-    navUl.classList.remove('show');
-    document.querySelector(link.getAttribute('href')).scrollIntoView({behavior:'smooth'});
-  });
-});
-
-// Form submit
-function submitForm(e){ e.preventDefault(); alert("Thank you! Your message has been sent."); e.target.reset(); }
-function newsletterSubmit(e){ e.preventDefault(); alert("Subscribed successfully!"); e.target.reset(); }
-
-// Scroll animations
-const sections = document.querySelectorAll('section');
-const menuCards = document.querySelectorAll('.menu-card');
-function revealElements() {
-  const triggerBottom = window.innerHeight/5*4;
-  sections.forEach(section=>{
-    const sectionTop = section.getBoundingClientRect().top;
-    if(sectionTop < triggerBottom){ section.classList.add('visible'); }
-  });
-  menuCards.forEach(card=>{
-    const cardTop = card.getBoundingClientRect().top;
-    if(cardTop < triggerBottom){ card.classList.add('visible'); }
-  });
-}
-window.addEventListener('scroll', revealElements);
-revealElements();
-
-// Carousel
-let current = 0;
-const slides = document.querySelectorAll('.carousel img');
-setInterval(()=>{
-  slides[current].classList.remove('active');
-  current = (current+1) % slides.length;
-  slides[current].classList.add('active');
-},4000);
-
-// Menu filter
-const filterButtons = document.querySelectorAll('.filter-btn');
-filterButtons.forEach(btn=>{
-  btn.addEventListener('click', ()=>{
-    filterButtons.forEach(b=>b.classList.remove('active'));
-    btn.classList.add('active');
-    const filter = btn.dataset.filter;
-    menuCards.forEach(card=>{
-      card.style.display = (filter==='all' || card.dataset.category===filter)?'block':'none';
-    });
-  });
-});
-
-// Counters
-const counters = document.querySelectorAll('.counter');
-counters.forEach(counter=>{
-  counter.innerText='0';
-  const updateCounter=()=>{
-    const target=+counter.dataset.target;
-    const current=+counter.innerText;
-    const increment=target/200;
-    if(current<target){ counter.innerText=Math.ceil(current+increment); setTimeout(updateCounter,10); }
-    else{ counter.innerText=target; }
-  };
-  updateCounter();
-});
-
-// Prank typing effect
-function showPrank(){
-  const prankText = document.getElementById('prank-text');
-  prankText.style.display = 'block';
-  prankText.innerText = '';
-  const message = "Fuck you 😜 Enjoy  your  coffee  instead!";
-  let i=0;
-  const typeWriter = setInterval(()=>{
-    prankText.innerText += message[i];
-    i++;
-    if(i>=message.length){ clearInterval(typeWriter); setTimeout(()=>{ prankText.style.display='none'; },5000); }
-  },50);
-}
-</script>
-</body>
-</html>
-
-
